# django-dashboard

./: README.md  _version.py  pyproject.toml
src/dashboard/: __init__.py  dashboard.py
src/dashboard/static/js/: dashboard.js
src/dashboard/templates/dashboard/: dashcard.html
